--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
   </head>
 
   <body>
-    <div class="flex mx-auto p-4 bg-gray-800">
-      <span>
-        <%= image_tag "money_satsutaba", class: "w-7 h-7 mr-3" %>
+    <div class="flex p-4 bg-gray-800">
+      <span class="flex-none mr-3">
+        <%= image_tag "money_satsutaba", class: "w-7 h-7" %>
       </span>
-      <span class="flex-1 text-left text-xl text-white">もねた銀行</span>
+      <span class="flex-none text-xl text-white">もねた銀行</span>
       <span class="flex-1 text-right text-white">Login</span>
     </div>
     <main class="container mx-auto mt-6 px-6">
