--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-6 bg-gray-200 rounded">
   <div class="col-span-4">
-    <div class="text-6xl font-bold mt-12 ml-8">赤城一郎様</div>
+    <div class="text-6xl font-bold mt-12 ml-8"><%= @user.kanji_name %>様</div>
     <div class="text-2xl mt-2 mb-12 ml-8">いつもご利用ありがとうございます</div>
   </div>
   <div class="col-span-2 bg-yellow">
