--- a/app/views/futsu_yokin/kekka.html.erb
+++ b/app/views/futsu_yokin/kekka.html.erb
@@ -1,4 +1,24 @@
-<div>
-  <h1 class="font-bold text-4xl">FutsuYokin#kekka</h1>
-  <p>Find me in app/views/futsu_yokin/kekka.html.erb</p>
+<div class="container-md mx-auto mt-4 p-4">
+  <div class="text-4xl">普通預金を開設しました</div>
+  <div class="grid grid-cols-3 my-4">
+
+    <div class="col-span-1 p-2">銀行名</div>  
+    <div class="col-span-2 p-2"><%= @kouza.bank.kanji_name %></div>  
+
+    <div class="col-span-1 p-2">支店名</div>  
+    <div class="col-span-2 p-2"><%= @kouza.shiten.kanji_name %></div>  
+
+    <div class="col-span-1 p-2">口座番号</div>  
+    <div class="col-span-2 p-2"><%= @kouza.bangou %></div>  
+
+    <div class="col-span-1 p-2">残高</div>  
+    <div class="col-span-2 p-2"><%= @kouza.zandaka %></div>  
+
+    <div class="col-span-1 p-2">貸越可能金額</div>  
+    <div class="col-span-2 p-2"><%= @kouza.zandaka + 1000000 %></div>  
+  </div>
+
+  <a href="/mypage" class="bg-blue-500 hover:bg-blue-300 text-white rounded p-2 my-8">
+    マイページへ
+  </a>
 </div>
