--- a/app/views/meisai/index.html.erb
+++ b/app/views/meisai/index.html.erb
@@ -1,4 +1,8 @@
-<div>
-  <h1 class="font-bold text-4xl">Meisai#index</h1>
-  <p>Find me in app/views/meisai/index.html.erb</p>
+<div class="w-1/2 mx-auto grid grid-cols-6">
+  <div class="font-bold p-1">取引日</div>
+  <div class="font-bold p-1">金額</div>
+  <div class="font-bold p-1">区分</div>
+  <div class="font-bold p-1">適用</div>
+
+
 </div>
