--- a/app/views/furikomi/kekka.html.erb
+++ b/app/views/furikomi/kekka.html.erb
@@ -1,4 +1,3 @@
-<div>
-  <h1 class="font-bold text-4xl">Furikomi#kekka</h1>
-  <p>Find me in app/views/furikomi/kekka.html.erb</p>
+<div class="bg-green-200 rounded p-8">
+  <div class="text-4xl col-span-3 text-green-500">振込を実施しました</div>
 </div>
