--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <span class="flex-none mr-3">
         <%= image_tag "money_satsutaba", class: "w-7 h-7" %>
       </span>
-      <span class="flex-none text-xl text-white">もねた銀行</span>
+      <a href="/mypage" class="flex-none text-xl text-white">もねた銀行</a>
 
       <% if @user %>
         <!-- ログインしているならログオフボタン -->
