--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -24,7 +24,7 @@
   <div class="flex flex-col border border-gray-300 rounded p-4">
     <div class="flex-none text-2xl">振込</div>
     <div class="flex-glow my-4"></div>
-    <a href="/furikomi/bank_select" class="flex-none bg-blue-500 hover:bg-blue-300 text-white rounded my-2 p-2">お手続きへ</a>
+    <a href="/furikomi/select_moto_kouza" class="flex-none bg-blue-500 hover:bg-blue-300 text-white rounded my-2 p-2">お手続きへ</a>
   </div>
 
   <div class="flex flex-col border border-gray-300 rounded p-4">
