--- a/app/views/furikomi/input_kingaku.html.erb
+++ b/app/views/furikomi/input_kingaku.html.erb
@@ -1,4 +1,9 @@
-<div>
-  <h1 class="font-bold text-4xl">Furikomi#input_kingaku</h1>
-  <p>Find me in app/views/furikomi/input_kingaku.html.erb</p>
+<div class="bg-gray-200 rounded p-8">
+  <div class="text-4xl col-span-3">振込金額を入力して下さい</div>
+  <hr class="my-8">
+  <form action="/furikomi/set_kingaku" method="post">
+    <label for="kingaku">振込金額</label>
+    <input type="number" name="kingaku" value="" class="p-1 border-gray-300 w-full">
+    <input type="submit" value="振込実行" class="cursor-pointer p-2 my-8 text-center rounded bg-blue-500 hover:bg-blue-300 text-white">
+  </form>
 </div>
