--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <!-- ナビゲーションバー -->
     <div class="flex p-4 bg-gray-800">
       <span class="flex-none mr-3">
-        <%= image_tag "money_satsutaba", class: "w-7 h-7" %>
+        <%= image_tag "/assets/money_satsutaba.png", class: "w-7 h-7" %>
       </span>
       <a href="/mypage" class="flex-none text-xl text-white">もねた銀行</a>
 
