--- a/app/views/meisai/index.html.erb
+++ b/app/views/meisai/index.html.erb
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-4 bg-gray-200 rounded p-8">
   <div class="text-4xl col-span-3">取引明細</div>
-  <%= image_tag "money_satsutaba", class: "w-24 h-24" %>
+  <%= image_tag "/assets/money_satsutaba.png", class: "w-24 h-24" %>
 </div>
 
 <div class="text-4xl mt-8">普通預金</div>
