--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -4,7 +4,7 @@
     <div class="text-2xl mt-2 mb-12 ml-8">いつもご利用ありがとうございます</div>
   </div>
   <div class="col-span-2">
-    <%= image_tag "logo_mo", class: "p-12" %>
+    <%= image_tag "/assets/logo_mo.png", class: "p-12" %>
   </div>
 </div>
 
