--- a/app/views/furikomi/kakunin.html.erb
+++ b/app/views/furikomi/kakunin.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="text-4xl mt-8">振込金額</div>
-<div class="text-2xl"><%= @kingaku %>円</div>
+<div class="text-2xl"><%= number_to_currency(@kingaku, unit: "￥", strip_insignificant_zeros: true) %></div>
 
 <div class="text-4xl mt-8">振込先口座</div>
 
@@ -16,8 +16,8 @@
   </div>
 
   <div class="grid grid-cols-6 border-t-2 border-gray-200">
-    <div class="p-2"><%= @saki_kouza.bank.kanji_name %></div>
-    <div class="p-2 col-span-2"><%= @saki_kouza.shiten.kanji_name %></div>
+    <div class="p-2"><%= Bank[@saki_kouza.bank_bangou]["kanji_name"] %></div>
+    <div class="p-2 col-span-2"><%= Shiten[@saki_kouza.shiten_bangou]["kanji_name"] %></div>
     <div class="p-2"><%= @saki_kouza.bangou %></div>
     <div class="p-2"><%= @saki_kouza.user.kanji_name %></div>
   </div>
@@ -34,8 +34,8 @@
   </div>
 
   <div class="grid grid-cols-6 border-t-2 border-gray-200">
-    <div class="p-2"><%= @moto_kouza.bank.kanji_name %></div>
-    <div class="p-2 col-span-2"><%= @moto_kouza.shiten.kanji_name %></div>
+    <div class="p-2"><%= Bank[@moto_kouza.bank_bangou]["kanji_name"] %></div>
+    <div class="p-2 col-span-2"><%= Shiten[@moto_kouza.shiten_bangou]["kanji_name"] %></div>
     <div class="p-2"><%= @moto_kouza.bangou %></div>
     <div class="p-2"><%= @moto_kouza.user.kanji_name %></div>
   </div>
