--- a/app/views/furikomi/select_bank.html.erb
+++ b/app/views/furikomi/select_bank.html.erb
@@ -11,12 +11,12 @@
     <div class="font-bold p-2">選択</div>
   </div>
 
-  <% @banks.each do |bank| %>
+  <% Bank.each do |bank_bangou, bank| %>
     <div class="grid grid-cols-3 border-t-2 border-t-gray-200">
-      <div class="p-2"><%= bank.bangou %></div>
-      <div class="p-2"><%= bank.kanji_name %></div>
+      <div class="p-2"><%= bank_bangou %></div>
+      <div class="p-2"><%= bank["kanji_name"] %></div>
       <form action="/furikomi/set_bank" method="post">
-        <input type="hidden" name="bank_id" value="<%= bank.id %>">
+        <input type="hidden" name="bank_bangou" value="<%= bank_bangou %>">
         <input type="submit" value="選択" class="my-2 mx-4 py-1 px-2 bg-blue-500 hover:bg-blue-300 text-white text-xs text-center rounded">
       </form>
     </div>
