--- a/app/views/furikomi/select_moto_kouza.html.erb
+++ b/app/views/furikomi/select_moto_kouza.html.erb
@@ -16,11 +16,11 @@
 
   <% @kouza.each do |kouza| %>
     <div class="grid grid-cols-7 border-t-2 border-gray-200">
-      <div class="p-2"><%= kouza.bank.kanji_name %></div>
-      <div class="p-2 col-span-2"><%= kouza.shiten.kanji_name %></div>
+      <div class="p-2"><%= Bank[kouza.bank_bangou]["kanji_name"] %></div>
+      <div class="p-2 col-span-2"><%= Shiten[kouza.shiten_bangou]["kanji_name"] %></div>
       <div class="p-2"><%= kouza.bangou %></div>
-      <div class="p-2"><%= kouza.zandaka %></div>
-      <div class="p-2"><%= kouza.zandaka + 1000000 %></div>
+      <div class="p-2"><%= number_to_currency(kouza.zandaka, unit: "￥", strip_insignificant_zeros: true) %></div>
+      <div class="p-2"><%= number_to_currency(kouza.zandaka + 1000000, unit: "￥", strip_insignificant_zeros: true) %></div>
       <form action="/furikomi/set_moto_kouza" method="post">
         <input type="hidden" name="moto_kouza_id" value="<%= kouza.id %>">
         <input type="submit" value="選択" class="my-2 mx-4 py-1 px-2 bg-blue-500 hover:bg-blue-300 text-white text-xs text-center rounded">
