--- a/app/views/furikomi/kekka.html.erb
+++ b/app/views/furikomi/kekka.html.erb
@@ -1,3 +1,4 @@
-<div class="bg-green-200 rounded p-8">
-  <div class="text-4xl col-span-3 text-green-500">振込を実施しました</div>
+<div class="container mx-auto flex flex-col items-center">
+  <%= image_tag "/assets/ojigi_animal_inu.png", class: "w-48" %>
+  <a href="/kouza" class="p-2 mt-8 mx-8 bg-blue-500 hover:bg-blue-300 text-white rounded">口座一覧へ</a>
 </div>
