--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </div>
     <!-- コンテンツ -->
-    <main class="md:container md:mx-auto mt-4 px-6">
+    <main class="container mx-auto mt-4 px-6">
 
       <!-- フラッシュメッセージ -->
       <% flash.each do |type, msg| %>
