--- a/app/views/users/logoff.html.erb
+++ b/app/views/users/logoff.html.erb
@@ -1,3 +1,4 @@
-<div class="container-md w-48 mx-auto">
-  <img src="<%= image_path 'ojigi_animal_inu.png' %>">
+<div class="container mx-auto flex flex-col items-center">
+  <%= image_tag "/assets/ojigi_animal_inu.png", class: "w-48" %>
+  <a href="/top" class="p-2 mt-8 mx-8 bg-blue-500 hover:bg-blue-300 text-white rounded">ログインページへ</a>
 </div>
