--- a/app/views/futsu_yokin/kekka.html.erb
+++ b/app/views/futsu_yokin/kekka.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-4 p-4">
+<div class="container mx-auto w-[480px] mt-4 p-8 bg-gray-200 rounded">
   <div class="text-4xl">普通預金を開設しました</div>
   <div class="grid grid-cols-3 my-4">
 
